<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints"> <!-- We want this to jump to the top -->

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/eventTitleTextView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:text="@string/event_title_tv_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eventTitleInput"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="4dp"
        android:gravity="bottom"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/eventTitleTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventDescriptionTextView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:text="@string/event_description_tv_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleTextView" />

    <EditText
        android:id="@+id/eventDescriptionInput"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:inputType="text"
        android:gravity="bottom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleInput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/eventDateTextView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:text="@string/event_date_tv_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTextView" />

    <Button
        android:id="@+id/selectDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="72dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/select_date_button_text"
        app:layout_constraintLeft_toRightOf="@+id/eventDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/eventDescriptionInput" />

    <TextView
        android:id="@+id/eventTimeTextView"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:gravity="bottom"
        android:text="@string/event_time_tv_string"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDateTextView" />

    <Button
        android:id="@+id/selectTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="84dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/select_time_button_text"
        app:layout_constraintLeft_toRightOf="@+id/eventDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/selectDateButton" />

    <Button
        android:id="@+id/deleteEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/confirmEventButton" />

    <Button
        android:id="@+id/confirmEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/confrim_event_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>