<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:ignore="MissingConstraints"> <!-- We want this to jump to the top -->

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/notificationImageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/baseline_notification_add_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/notificationMessageBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:layout_constraintHorizontal_bias="0.498"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/notification_icon_description" />

    <TextView
        android:id="@+id/notificationMessageBox"
        android:layout_width="301dp"
        android:layout_height="79dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/notificationInformMessage"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationImageView" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="Phone-Number"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/phoneNumInput"
        app:layout_constraintTop_toBottomOf="@+id/notificationMessageBox" />

    <EditText
        android:id="@+id/phoneNumInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:hint="123456789"
        app:layout_constraintLeft_toRightOf="@+id/phoneTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationMessageBox" />

    <Button
        android:id="@+id/refuseNotificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="88dp"
        android:text="@string/denyButtonText"
        app:layout_constraintRight_toLeftOf="@+id/confirmNotificationButton"
        app:layout_constraintTop_toBottomOf="@+id/notificationMessageBox" />

    <Button
        android:id="@+id/confirmNotificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="300dp"
        android:text="@string/allowButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationMessageBox" />

</androidx.constraintlayout.widget.ConstraintLayout>